<resources>
    <string name="app_name">乐享健康</string>
    <string name="running_title">刷跑步</string>
    <string name="activity_title">活动签到</string>
    <string name="course_title">课程签到</string>
    <string name="course_detail">课程详情</string>
    <string name="current_course">当前课程</string>
    <string name="course_time">上课时间</string>
    <string name="course_teacher">任课教师</string>
    <string name="course_project_name">上课项目</string>
    <string name="course_project_info">课程信息</string>
    <string name="course_info_attendance">课程考勤表</string>
    <string name="course_info_purpose">已签到/已考勤</string>
    <string name="grade">年级</string>
    <string name="campus">校区</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="next">下一页</string>
    <string name="activity_statistics">我的活动统计</string>
    <string name="statistic_purpose_title">我的活动签到目标</string>
    <string name="statistic_registered_title">活动报名次数</string>
    <string name="statistic_signed_title">活动签到次数</string>
    <string name="statistic_no_grade_title">不计入成绩</string>
    <string name="before">上一页</string>
    <string name="page_to_bottom">已经到底了！</string>
    <string name="update_url">https://foreverddb.github.io/FuckLegym/msg.json</string>
    <string name="local_maps_path">local_maps</string>
    <string name="introduction_running">每次上传的跑步公里数：这是一个在一定范围之间的随机值。   单位：km</string>
    <string name="introduction_sign_up">选择想要签到的活动，需先报名后签到，若有二次签到的未到时间会签到失败。</string>
    <string name="introduction_course_sign">课程签到当且仅当老师开启签到后可以成功签到，所以需要自己判断开启签到的时间。（也许后续会开发自动监测签到功能）</string>
    <string name="current_activities">当前活动(滑动查看更多)</string>
    <string name="sign_up">签到</string>
    <string name="auto_sign_in_tip">是否开启一小时后自动签到(开发中，敬请期待)</string>
    <string name="auto_sign_in_introduction">暂无</string>
    <string name="sign_for">报名</string>
    <string name="sign_error_title">失败原因</string>
    <string name="running_area">跑步地图</string>
    <string name="running_type">跑步类型</string>
    <string name="free_running">自由跑</string>
    <string name="point_running">定点跑</string>
    <string name="range_running">范围跑</string>
    <string name="import_clould_maps">导入云端地图</string>
    <string name="edit_custom_maps">编辑自定义路线</string>
    <string name="upload">上传</string>
    <string name="upload_running">刷跑步</string>
    <string name="option_running">跑步选项</string>
    <string name="running_distance_range">跑好远</string>
    <string name="please_login_first">请先返回去登录</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="import_success">导入成功！</string>
    <string name="login">登录</string>
    <string name="login_failed">登录失败</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="i_use_app_quietly">我会低调使用该软件</string>
    <string name="account_helper">一般是手机号</string>
    <string name="go_to_running">去跑步</string>
    <string name="semester_mileage">本学期里程</string>
    <string name="sign_activity">活动签到</string>
    <string name="sign_course">课程签到</string>
    <string name="cao_dan">该软件仅供开发者调试学习参考使用\n严禁用于违法违禁等不良行为；使用本程序所造成的一切后果由用户自行承担！</string>
    <string name="sign_out">注销登录</string>
    <string name="take_the_consequences_self">使用本程序所造成的一切后果由我自己承担</string>
    <string name="feedback">反馈</string>
    <string name="has_copy_to_clipborad">已复制到剪切板</string>
    <string name="rule">规则</string>
    <string name="details">详情</string>
    <string name="running_rules">跑步规则</string>
    <string name="running_history">跑步历史</string>
    <string name="load_failed">加载失败</string>
    <string name="effective_mileage">有效里程</string>
    <string name="km">km</string>
    <string name="total_mileage">总里程</string>
    <string name="today_has_run">今日已跑</string>
    <string name="this_week_has_run">本周已跑</string>
    <string name="doc">文档</string>
    <string name="online_doc">在线文档</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="alert">警告</string>
    <string name="still_upload">仍要上传</string>
    <string name="map_not_match_alert">地图名称和学校名称相似度过低，请再检查一下有没有选错学校哦</string>
    <string name="draw_map_by_self">自己绘制地图</string>
    <string name="i_dont_have_invite_code">我没有邀请码</string>
    <string name="welcome">欢迎使用！</string>
    <string name="invite_code">邀请码</string>
    <string name="please_input_invite_code">请填写邀请码哦~</string>
    <string name="introduction_invite_code">没有可以不填写，只有一次机会</string>
    <string name="skip_invite_code">跳过，直奔主题！</string>
    <string name="i_dont_knoew_invite_code">不知道什么邀请码？</string>
    <string name="invite_code_invaild_or_network_exception">邀请码无效或网络异常</string>
    <string name="thank_you">感谢使用！</string>
    <string name="network_exception">网络异常</string>
    <string name="running_date_invaild">未在跑步时间之内,确定继续上传吗?  (跑步规定在主页看)</string>
    <string name="processing">进行中</string>
    <string name="huodong_to_do">还未开始</string>
    <string name="all_activities">所有活动</string>
    <string name="extracurricular_activities">课外活动</string>
    <string name="there_is_nothing">空空如也哦~</string>
    <string name="loading">加载中，请稍后...</string>
    <string name="search">搜索</string>
    <string name="activity_name_or_address">活动的名称或地址</string>
    <string name="turn_to_top">回到顶部</string>
    <string name="activity_auto_sign_in">活动自动签到</string>
    <string name="activity_quickly_register">一键报名</string>
    <string name="i_know">知道了</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="exception">异常</string>
    <string name="warning_activity_conflict">警告:与其他活动或课程组时间冲突</string>
    <string name="warning">警告</string>
    <string name="resume">继续</string>
    <string name="running_time_illeagal">不在学校规定的跑步时间范围内</string>
    <string name="select_all">全选</string>
    <string name="activity_quickly_unregister_all">一键取消报名</string>
    <string name="activity_quickly_register_all">一键快速报名</string>
    <string name="activity_quickly_unregister">一键取消报名</string>
    <string name="all_course">所有课程</string>
    <string name="my_course_list">我的课程列表</string>
    <string name="my_integral">我的积分</string>
    <string name="please_relogin">请重新登录</string>
    <string name="recharge_central">会员中心</string>
    <string name="copy_success">已复制到剪切板</string>
    <string name="copy_failed">复制失败，请手动长按复制</string>
    <string name="invite_code_rules">
        1. 找到还没有使用过此软件的同学
        \n\n2. 让他（她）下载此软件并登录
        \n\n3. 新用户首次登录会弹出输入邀请码的对话框，在这里填入你的邀请码
        \n\n4. 每邀请一个新同学，你的账户将会获得20积分
    </string>
    <string name="invite_new_user_get_integral">邀请新用户得好礼🚀</string>
    <string name="no_vip">普通会员</string>
    <string name="click_to_recharge">点击充值</string>
    <string name="this_is_my_invite_code">我的邀请码:</string>
    <string name="integral_rules_title">积分使用规则</string>
    <string name="integral_rules">
        1. 积分仅限本账号使用，不可赠送，不可提现。
        \n\n2. 积分小于等于0将不能使用本软件部分特色功能。
        \n\n3. 积分可以通过充值或邀请新用户的方式获取。
        \n\n4. 每上传1km有效里程消费1积分。
        \n\n5. 活动每签一次到消费2积分。
        \n\n6. 课程每签一次到消费2积分。
    </string>
    <string name="pack_up">收起</string>
    <string name="current_price_title">当前单价:</string>
    <string name="per_integral">/每积分</string>
    <string name="diy">自定义</string>
    <string name="pay">支付</string>
    <string name="text_beg">熬夜写代码头发都掉光了~ 呜呜 ~\n请作者喝杯奶茶总可以叭~ ❤</string>
    <string name="is_vip">至尊vip</string>
    <string name="history">历史记录</string>
    <string name="order_history">订单记录</string>
    <string name="time">时间</string>
    <string name="order_id">订单号</string>

</resources>
