<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/activity_statistics"
        android:icon="@drawable/ic_baseline_analytics_24"
        android:title="@string/activity_statistics"
        app:showAsAction="ifRoom" />

<!--    <item-->
<!--        android:id="@+id/activity_auto_sign_in"-->
<!--        android:title="@string/activity_auto_sign_in"-->
<!--        app:showAsAction="never" />-->

    <item
        android:id="@+id/activity_quickly_register"
        android:title="@string/activity_quickly_register"
        android:visible="false"
        app:showAsAction="never" />

</menu>