<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:text="@string/current_activities"
                    android:textColor="?attr/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="15dp"
                    android:alpha="0.5"
                    android:background="?attr/colorPrimaryInverse"
                    tools:ignore="PrivateResource" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_before_page"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/before"
                    app:icon="@drawable/ic_baseline_navigate_before_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_next_page"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/next"
                    app:icon="@drawable/ic_baseline_navigate_next_24" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selectionCardListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:reverseLayout="false"
                tools:listitem="@layout/item_activity_card"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="15dp"
                        android:alpha="0.5"
                        android:background="?attr/colorPrimaryInverse"
                        tools:ignore="PrivateResource" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/introduction_sign_up" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="15dp"
                        android:alpha="0.5"
                        android:background="?attr/colorPrimaryInverse"
                        tools:ignore="PrivateResource" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_auto_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_sign_in_tip"
                android:enabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_uploadSignUp"
                    android:layout_width="200dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/sign_for"
                    app:icon="@drawable/ic_baseline_assignment_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_uploadSignIn"
                    android:layout_width="200dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/sign_up"
                    app:icon="@drawable/ic_baseline_assignment_turned_in_24" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>