<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detail"
            type="legym.fuck.logic.legym.network.model.course.CourseDetailResultBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20sp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:textAppearance="?attr/textAppearanceHeadlineSmall"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/course_time"
                    android:alpha="0.6"
                    android:drawableStart="@drawable/ic_baseline_access_time_24"
                    app:layout_constraintTop_toBottomOf="@+id/course_detail_name_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@{detail.startTime}"
                    app:layout_constraintTop_toTopOf="@+id/course_detail_time_title"
                    app:layout_constraintBottom_toBottomOf="@+id/course_detail_time_title"
                    app:layout_constraintStart_toEndOf="@id/course_detail_time_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_teacher_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/course_teacher"
                    android:alpha="0.6"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    app:layout_constraintTop_toBottomOf="@+id/course_detail_time_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@{detail.teacherName}"
                    app:layout_constraintTop_toTopOf="@+id/course_detail_teacher_title"
                    app:layout_constraintBottom_toBottomOf="@+id/course_detail_teacher_title"
                    app:layout_constraintStart_toEndOf="@id/course_detail_teacher_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_project_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/course_project_name"
                    android:alpha="0.6"
                    android:drawableStart="@drawable/ic_baseline_article_24"
                    app:layout_constraintTop_toBottomOf="@+id/course_detail_teacher_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@{detail.projectName}"
                    app:layout_constraintTop_toTopOf="@+id/course_detail_project_title"
                    app:layout_constraintBottom_toBottomOf="@+id/course_detail_project_title"
                    app:layout_constraintStart_toEndOf="@id/course_detail_project_title"/>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/insetDivider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:dividerInsetEnd="16dp"
                    app:dividerInsetStart="16dp"
                    android:alpha="0.3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/course_detail_project_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_project_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10sp"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:text="@string/course_project_info"
                    app:layout_constraintTop_toTopOf="@+id/insetDivider"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_grade_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/grade"
                    android:alpha="0.6"
                    android:drawableStart="@drawable/ic_baseline_school_24"
                    app:layout_constraintTop_toBottomOf="@+id/course_detail_project_info_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@{detail.year.toString()}"
                    app:layout_constraintTop_toTopOf="@+id/course_detail_grade_title"
                    app:layout_constraintBottom_toBottomOf="@+id/course_detail_grade_title"
                    app:layout_constraintStart_toEndOf="@id/course_detail_grade_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_campus_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/campus"
                    android:alpha="0.6"
                    android:drawableStart="@drawable/ic_baseline_domain_24"
                    app:layout_constraintTop_toBottomOf="@+id/course_detail_grade_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@{detail.campusName}"
                    app:layout_constraintTop_toTopOf="@+id/course_detail_campus_title"
                    app:layout_constraintBottom_toBottomOf="@+id/course_detail_campus_title"
                    app:layout_constraintStart_toEndOf="@id/course_detail_campus_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_start_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/start_date"
                    android:alpha="0.6"
                    android:drawableStart="@drawable/ic_baseline_slow_motion_video_24"
                    app:layout_constraintTop_toBottomOf="@+id/course_detail_campus_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    app:layout_constraintTop_toTopOf="@+id/course_detail_start_date_title"
                    app:layout_constraintBottom_toBottomOf="@+id/course_detail_start_date_title"
                    app:layout_constraintStart_toEndOf="@id/course_detail_start_date_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_end_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    android:text="@string/end_date"
                    android:alpha="0.6"
                    android:drawableStart="@drawable/ic_baseline_offline_pin_24"
                    app:layout_constraintTop_toBottomOf="@+id/course_detail_start_date_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/course_detail_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5sp"
                    app:layout_constraintTop_toTopOf="@+id/course_detail_end_date_title"
                    app:layout_constraintBottom_toBottomOf="@+id/course_detail_end_date_title"
                    app:layout_constraintStart_toEndOf="@id/course_detail_end_date_title"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>